WIP optim : cut the map in chunks of 5000 size units
Signed-off-by: BOUTIER Charly <charly.boutier@rte-france.com>